kubernetes/mymakler-svc-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mymakler-svc-api
  namespace: mymakler
  labels:
    app: mymakler-svc-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mymakler-svc-api
  template:
    metadata:
      labels:
        app: mymakler-svc-api
    spec:
      containers:
        - name: mymakler-svc-api
          image: salmanzebmalik/group-04-mymakler-svc-api:0.0.1
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "512m"
