kubernetes/mymakler-svc-frauddetection-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mymakler-svc-frauddetection
  namespace: mymakler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mymakler-svc-frauddetection
  template:
    metadata:
      labels:
        app: mymakler-svc-frauddetection
    spec:
      containers:
        - name: mymakler-svc-frauddetection
          image: salmanzebmalik/group-04-mymakler-svc-frauddetection:0.0.1
          ports:
            - name: http
              containerPort: 8161
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
