kubernetes/mymakler-ui-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mymakler-ui-web
  namespace: mymakler
  labels:
    app: mymakler-ui-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mymakler-ui-web
  template:
    metadata:
      labels:
        app: mymakler-ui-web
    spec:
      containers:
        - name: mymakler-ui-web
          image: salmanzebmalik/group-04-mymakler-ui-web:0.0.1
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "512m"
