kubernetes/artemis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: artemis
  namespace: mymakler
spec:
  selector:
    app: artemis
  ports:
  - name: web
    protocol: TCP
    port: 8161
    targetPort: 8161
  - name: broker
    protocol: TCP
    port: 61616
    targetPort: 61616
