kubernetes/mymakler-svc-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mymakler-svc-api
  namespace: mymakler
spec:
  selector:
    app: mymakler-svc-api
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
