kubernetes/mymakler-svc-frauddetection-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mymakler-svc-frauddetection
  namespace: mymakler
spec:
  selector:
    app: mymakler-svc-frauddetection
  ports:
    - protocol: TCP
      port: 8161
      targetPort: 8161
