kubernetes/mymakler-ui-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mymakler-ui-web
  namespace: mymakler
spec:
  selector:
    app: mymakler-ui-web
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
