kubernetes/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: mymakler
spec:
  selector:
    app: mysql
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
